--- a/views/show.ejs
+++ b/views/show.ejs
@@ -9,8 +9,12 @@
         <span>By: <%= blog.author %> (<%= blog.created.toDateString() %>)</span>
         <img class="ui centered image" src="<%= blog.image %>" alt="Post Thumbnail">
         <div class="content">
-            <p><%- blog.body %></p>
+            <p><%- blog.content %></p>
         </div>
+
+        <footer class="ui footer">
+            <a href="/blog/<%= blog._id %>/edit">Edit Post</a>
+        </footer>
     </article>
 
 
